--- a/css_sito.css
+++ b/css_sito.css
@@ -30,8 +30,9 @@ h2 {
 }
 
 .carousel-inner .title {
-  font-weight: 600;
+  font-weight: 700;
   font-size: 2em;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .carousel-caption {
@@ -206,7 +207,14 @@ h2 {
   background-color: #f4f4f4;
   padding: 50px 0;
   text-align: center;
+  font-weight: 600;
+  font-size: 1.5em;
+  text-transform: uppercase;
 }
+.cta-section .title {
+  letter-spacing: 5px;
+}
+
 .cta-section img,
 .team-section img:not(.team-section) {
   max-height: 5em;
@@ -219,12 +227,6 @@ h2 {
   padding-left: 15px;
   padding-right: 15px;
 } */
-
-.cta-section {
-  font-weight: 600;
-  font-size: 1.5em;
-  text-transform: uppercase;
-}
 
 .cta-section .btn {
   border: 1px solid #aa004f;
@@ -243,6 +245,7 @@ h2 {
 
 .sezione-sfondo {
   background: #f4f4f4;
+  overflow: hidden;
 }
 
 /*.descrizione p {*/
@@ -323,9 +326,9 @@ h2 {
 
 .fadein_right {
   opacity: 0;
-  transform: translateX(70px);
-  -webkit-transform: translateX(70px);
-  -moz-transform: translateX(70px);
+  transform: translateX(50px);
+  -webkit-transform: translateX(50px);
+  -moz-transform: translateX(50px);
   transition: all 0.75s ease 0s;
   -webkit-transition: all 0.75s ease 0s;
   -moz-transition: all 0.75s ease 0s;
@@ -340,9 +343,9 @@ h2 {
 
 .fadein_left {
   opacity: 0;
-  transform: translateX(-70px);
-  -webkit-transform: translateX(-70px);
-  -moz-transform: translateX(-70px);
+  transform: translateX(-50px);
+  -webkit-transform: translateX(-50px);
+  -moz-transform: translateX(-50px);
   transition: all 0.75s ease 0s;
   -webkit-transition: all 0.75s ease 0s;
   -moz-transition: all 0.75s ease 0s;
@@ -361,7 +364,7 @@ h2 {
 
 .underline {
   width: 80px;
-  border-bottom: 2px solid white;
+  border-bottom: 1px solid white;
   margin-bottom: 1em;
 }
 
@@ -369,4 +372,20 @@ h2 {
   .descrizione {
     background-color: transparent;
   }
+}
+
+.nav-link{
+  transition: all 0.5s ease !important;
+}
+.active {
+font-weight: 550 !important;
+opacity: 1 !important;
+}
+
+.bg-white {
+  background: #fff;
+}
+
+.bg-grey {
+  background-color: #f4f4f4;
 }
