--- a/css_sito.css
+++ b/css_sito.css
@@ -368,11 +368,6 @@ h2 {
   margin-bottom: 1em;
 }
 
-@media (min-width: 768px) {
-  .descrizione {
-    background-color: transparent;
-  }
-}
 
 .nav-link{
   transition: all 0.5s ease !important;
@@ -388,4 +383,42 @@ opacity: 1 !important;
 
 .bg-grey {
   background-color: #f4f4f4;
+}
+
+
+@media (min-width: 768px) {
+  
+  .descrizione {
+    background-color: transparent;
+  }
+}
+
+
+/* DISPOSITIVI PICCOLI */
+
+@media (max-width: 768px) {
+  .navbar-brand img{
+    max-height: 3vh;
+  }
+
+  .cta-section .title{
+    font-size: 0.8em;
+  }
+
+  .linear-background{
+    background: linear-gradient(
+      90deg,
+      rgba(253, 253, 253, 0) 0%,
+      rgba(255, 255, 255, 0) 49.3%,
+      rgba(144, 21, 61, 1) 49.4%,
+      rgba(144, 21, 61, 1) 49.8%,
+      rgba(255, 255, 255, 0) 49.9%,
+      rgba(255, 255, 255, 0) 100%
+    )
+  }
+
+  .year img{
+    min-width: 150px;
+  }
+ 
 }
