--- a/css_sito.css
+++ b/css_sito.css
@@ -50,7 +50,7 @@ h2 {
 
 .section-title {
   font-weight: 600;
-  color: #aa004f;
+  color: #90153d;
   font-family: "Barrio", sans-serif;
   font-size: 3em;
 }
@@ -62,7 +62,7 @@ h2 {
 
 .section-title {
   font-weight: 600;
-  color: #aa004f;
+  color: #90153d;
   font-family: "Barrio", sans-serif;
   font-size: 3em;
 }
@@ -117,7 +117,7 @@ h2 {
 
 .year {
   font-size: 4rem;
-  color: #aa004f;
+  color: #90153d;
   font-family: "Barrio", sans-serif;
 }
 .year img {
@@ -169,7 +169,7 @@ h2 {
 
 .info-section h2 {
   font-family: "Barrio", sans-serif;
-  color: #aa004f;
+  color: #90153d;
 }
 
 .info-section .titolo {
@@ -182,8 +182,8 @@ h2 {
 }
 
 .info-section .btn {
-  border: 1px solid #aa004f;
-  color: #aa004f;
+  border: 1px solid #90153d;
+  color: #90153d;
 }
 
 .info-section img {
@@ -229,14 +229,14 @@ h2 {
 } */
 
 .cta-section .btn {
-  border: 1px solid #aa004f;
-  color: #aa004f;
+  border: 1px solid #90153d;
+  color: #90153d;
 }
 
 .cta-section .btn:hover {
   border: 1px solid #fff;
   color: #fff;
-  background-color: #aa004f;
+  background-color: #90153d;
 }
 
 .sezione-testo {
@@ -397,12 +397,18 @@ opacity: 1 !important;
 /* DISPOSITIVI PICCOLI */
 
 @media (max-width: 768px) {
+
+  .info-section .titolo{
+    font-size: 1.1em;
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
   .navbar-brand img{
     max-height: 3vh;
   }
 
   .cta-section .title{
-    font-size: 0.8em;
+    font-size: 0.7em;
   }
 
   .linear-background{
@@ -410,7 +416,7 @@ opacity: 1 !important;
       90deg,
       rgba(253, 253, 253, 0) 0%,
       rgba(255, 255, 255, 0) 49.3%,
-      rgba(144, 21, 61, 1) 49.4%,
+      rgb(144, 21, 61) 49.4%,
       rgba(144, 21, 61, 1) 49.8%,
       rgba(255, 255, 255, 0) 49.9%,
       rgba(255, 255, 255, 0) 100%
