--- a/css_sito.css
+++ b/css_sito.css
@@ -24,15 +24,30 @@ h2 {
   height: 50px;
 }
 
+.div-image{
+  background-position: center center;
+  background-size: cover;
+  min-height: 512px;
+}
+
 .carousel-caption h1 {
   font-weight: 600;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .carousel-inner .title {
-  font-weight: 700;
-  font-size: 2em;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  transition: all 0.6s ease;
+  text-align: center;
+  position: absolute;
+top: 50%;
+left: 50%;
+z-index: 999;
+font-weight: 700;
+font-size: 2em;
+transform: translate(-50%, -50%);
+color: white;
+text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);  
+
 }
 
 .carousel-caption {
@@ -205,8 +220,7 @@ h2 {
 
 .cta-section {
   background-color: #f4f4f4;
-  padding: 50px 0;
-  text-align: center;
+   text-align: center;
   font-weight: 600;
   font-size: 1.5em;
   text-transform: uppercase;
@@ -221,12 +235,6 @@ h2 {
   margin: 2em;
 }
 
-/* .team-section{
-    overflow: hidden;
-  max-width: 100%;
-  padding-left: 15px;
-  padding-right: 15px;
-} */
 
 .cta-section .btn {
   border: 1px solid #90153d;
@@ -248,10 +256,6 @@ h2 {
   overflow: hidden;
 }
 
-/*.descrizione p {*/
-/*    padding: 2vh;*/
-
-/*}*/
 
 .descrizione {
   background-color: #f4f4f4;
@@ -269,9 +273,7 @@ h2 {
 }
 
 .animation.animate.fadeIn {
-  /*animation: fadeIn 1.5s forwards;*/
-
-  transform: translateY(0);
+   transform: translateY(0);
   opacity: 1;
 }
 
@@ -291,7 +293,7 @@ h2 {
 }
 
 .team-section .foto-section img {
-  max-height: 50%;
+  max-height: 200px;
 }
 
 .linear-background {
@@ -307,13 +309,7 @@ h2 {
   );
 }
 
-.carousel .carousel-item {
-  /*height: 90vh;*/
-}
 
-.carousel-caption {
-  /*margin: auto;*/
-}
 .carousel-item img {
   /*min-width: unset;*/
   /*position: absolute;*/
@@ -385,7 +381,20 @@ opacity: 1 !important;
   background-color: #f4f4f4;
 }
 
-
+#download-pdf .btn {
+  transition: all 0.3s ease;
+  /* background-color: transparent; */
+  color: #90153d;
+  /* font-weight: bold; */
+  border: solid 3px #90153dff;
+  
+}  
+#download-pdf .btn:hover {
+  background-color: #90153d;
+  color: #fff;
+  /* font-weight: bold; */
+  
+}
 @media (min-width: 768px) {
   
   .descrizione {
@@ -402,6 +411,10 @@ opacity: 1 !important;
     font-size: 1.1em;
     padding-left: 1rem;
     padding-right: 1rem;
+  }
+
+  .carousel-inner .title{
+    font-size: 1.1em;
   }
   .navbar-brand img{
     max-height: 3vh;
@@ -428,3 +441,7 @@ opacity: 1 !important;
   }
  
 }
+
+
+
+
